kubernetes/apps/potber/overlays/test/delete-potber-api-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-api
