kubernetes/apps/potber/overlays/test/delete-potber-auth-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-auth
