kubernetes/apps/potber/overlays/test/patch-potber-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-auth
spec:
  rules:
    - host: test-auth.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-auth
                port:
                  number: 80
  tls:
    - hosts:
        - test-auth.potber.de
      secretName: test-auth.potber.de-tls
