kubernetes/apps/potber/overlays/test/patch-potber-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-client
spec:
  rules:
    - host: test.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-client
                port:
                  number: 80
  tls:
    - hosts:
        - test.potber.de
      secretName: test.potber.de-tls
